update html title

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css?family=Cantarell:700i|Inconsolata&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Domain availability checker</title>
   </head>
 
   <body>
